[gd_scene load_steps=3 format=3 uid="uid://b2mai3opfndh7"]

[ext_resource type="Script" path="res://scripts/char_select.gd" id="1_iadow"]
[ext_resource type="ButtonGroup" uid="uid://dtx6o65y5oek7" path="res://resources/char_select_buttons.tres" id="2_tyj4c"]

[node name="CharSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iadow")
group = ExtResource("2_tyj4c")

[node name="Confirm" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Confirm"

[node name="DebugChosenChar" type="ColorRect" parent="."]
custom_minimum_size = Vector2(325, 73)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -162.5
offset_right = 162.5
offset_bottom = 73.0
grow_horizontal = 2
color = Color(0, 0.301961, 0.305882, 1)

[node name="DebugCharText" type="Label" parent="DebugChosenChar"]
layout_mode = 0
offset_left = 43.0
offset_top = 26.0
offset_right = 282.0
offset_bottom = 49.0
metadata/_edit_lock_ = true

[node name="CharacterButtons" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -19.0
offset_right = 225.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Char1" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_tyj4c")
text = "Char 1"

[node name="Char2" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_tyj4c")
text = "Char 2"

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
